# HackathonS25

./: .env.example  README.md  biome.json  package.json  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  types.rs
src-tauri/src/data/: affirmations.rs  exercise.rs  meditation.rs  mod.rs
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  global.css  moods_template.svelte
src/routes/all_missions/: +page.svelte
src/routes/components/: Header.svelte
src/routes/dashboard/: +page.svelte
src/routes/meditation/: +page.svelte  MeditationCard.svelte
src/routes/sign-in/: +page.svelte
src/routes/sign-up/: +page.svelte
